build: add env variable

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "electron-forge start",
     "test": "test",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "publish": "electron-forge publish"
   },
   "keywords": [
     "electron"
@@ -22,7 +23,9 @@
     "@electron-forge/maker-zip": "^7.5.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.5.0",
     "@electron-forge/plugin-fuses": "^7.5.0",
+    "@electron-forge/publisher-github": "^7.5.0",
     "@electron/fuses": "^1.8.0",
+    "dotenv": "^16.4.5",
     "electron": "^32.1.2"
   },
   "dependencies": {
