--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1",
+    "update-electron-app": "^3.0.0",
     "yarn": "^1.22.22"
   }
 }
